# fortuneDesktop

./: SETUP_COMPLETE.md  jest.config.cjs  package-lock.json  package.json  tailwind.config.js  verify-layout.js
src/: App.css  App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
src/components/: index.ts
src/components/Forms/: BirthInfoForm.tsx  FengshuiImageForm.tsx  InquiryContentForm.tsx  LiuyaoForm.tsx  LocationInfoForm.tsx  PhysiognomyForm.tsx
src/components/Layout/: AppHeader.css  AppHeader.tsx  AppSidebar.css  AppSidebar.tsx  MainLayout.css  MainLayout.tsx  index.ts
src/components/ResultPage/: ResultPage.css  ResultPage.tsx  index.ts
src/components/TabPanel/: README.md  TabPanel.css  TabPanel.tsx  index.ts
src/components/TabPanel/__tests__/: TabPanel.integration.test.tsx  TabPanel.test.tsx
src/constants/: index.ts
src/store/: useAppStore.ts
src/types/: index.ts
src/utils/: index.ts
微信证书/商户API证书/: apiclient_cert.p12  apiclient_cert.pem  apiclient_key.pem
微信证书/微信支付商户号/: 商户号.txt
微信证书/解密回调/: APIv3
微信证书/验证微信支付身份/: pub_key.pem
